--- a/src/lib/assets/i18n/it.json
+++ b/src/lib/assets/i18n/it.json
@@ -319,7 +319,7 @@
       "placeholder_pia_name": "Nome della PIA",
       "placeholder_sector_name": "Nome del settore associato",
       "placeholder_start": "Tutti i campi sono obbligatori",
-      "placeholder_structure": "Modello di base",
+      "placeholder_structure": "Modello predefinito",
       "placeholder_structure_name": "Titolo del modello",
       "placeholder_validation": "Cognome, nome",
       "sector_name": "Settore collegato",
